feat: Implement Stat Editor and Trainer ID Editor pages
- Added StatEditorPage for comprehensive IV/EV/stat management with real-time updates and hyper training support.
- Introduced TrainerIDEditorPage for managing trainer ID, including both 6-digit and 16-bit formats, with TSV calculations and randomization features.
- Enhanced UI components with proper data binding and event handling for user interactions.
- Included detailed validation and feedback mechanisms for user inputs in both editors.
- Created a comparison analysis document outlining the differences between the MAUI and WinForms implementations, highlighting critical components and architectural improvements needed.

--- a/PKHeX.MAUI/PKHeX.MAUI.csproj
+++ b/PKHeX.MAUI/PKHeX.MAUI.csproj
@@ -50,6 +50,7 @@
     <ItemGroup>
         <ProjectReference Include="..\PKHeX.Core\PKHeX.Core.csproj" />
         <ProjectReference Include="..\PKHeX.Drawing\PKHeX.Drawing.csproj" />
+        <ProjectReference Include="..\PKHeX.Drawing.Misc\PKHeX.Drawing.Misc.csproj" />
         <ProjectReference Include="..\PKHeX.Drawing.PokeSprite\PKHeX.Drawing.PokeSprite.csproj" />
     </ItemGroup>
 
