fix runtime json config

--- a/PKHeX.MAUI.UITests/PKHeX.MAUI.UITests.csproj
+++ b/PKHeX.MAUI.UITests/PKHeX.MAUI.UITests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0-maccatalyst17.0</TargetFramework>
+    <RuntimeIdentifier>maccatalyst-arm64</RuntimeIdentifier>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
