--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -38,8 +38,8 @@ jobs:
       run: |
         cd PKHeX.MAUI
         # PKHeX.MAUI only targets net8.0-maccatalyst, not net8.0
-        # Must explicitly specify framework to avoid NETSDK1047 error
-        dotnet build --configuration Release --no-restore -f net8.0-maccatalyst17.0
+        # Must explicitly specify framework and runtime to avoid NETSDK1047 error
+        dotnet build --configuration Release --no-restore -f net8.0-maccatalyst17.0 -r maccatalyst-arm64
     
     - name: Verify build output
       run: |
