--- a/PKHeX.MAUI/PKHeX.MAUI.csproj
+++ b/PKHeX.MAUI/PKHeX.MAUI.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net8.0-maccatalyst17.0</TargetFrameworks>
+        <TargetFrameworks>net8.0-maccatalyst</TargetFrameworks>
         <OutputType>Exe</OutputType>
         <RootNamespace>PKHeX.MAUI</RootNamespace>
         <UseMaui>true</UseMaui>
