--- a/.github/workflows/macos-ui-tests.yml
+++ b/.github/workflows/macos-ui-tests.yml
@@ -62,52 +62,56 @@ jobs:
         # Allow apps downloaded from anywhere (for test apps)
         sudo spctl --master-disable
         
+        # Grant accessibility permissions for automation (GitHub Actions specific)
+        # This enables UI automation without manual approval
+        sudo sqlite3 /Library/Application\ Support/com.apple.TCC/TCC.db "INSERT OR REPLACE INTO access VALUES('kTCCServiceAccessibility','com.github.runner',0,2,2,1,NULL,NULL,0,'UNUSED',NULL,0,1687440427);" || echo "TCC accessibility setup may have failed, continuing..."
+        
+        # Additional permissions for screen recording (needed for screenshots)
+        sudo sqlite3 /Library/Application\ Support/com.apple.TCC/TCC.db "INSERT OR REPLACE INTO access VALUES('kTCCServiceScreenCapture','com.github.runner',0,2,2,1,NULL,NULL,0,'UNUSED',NULL,0,1687440427);" || echo "TCC screen capture setup may have failed, continuing..."
+        
         # Note: Accessibility permissions are handled through app entitlements
         # rather than direct TCC database modification for better compatibility
     
     - name: Restore dependencies
       run: dotnet restore
     
-    # - name: Build Core Projects  
-    #   run: |
-    #     dotnet build PKHeX.Core/PKHeX.Core.csproj --configuration Release --no-restore --verbosity minimal
-    #     # Skip Windows-specific drawing libraries on macOS to avoid System.Drawing compatibility issues
-    #     # dotnet build PKHeX.Drawing/PKHeX.Drawing.csproj --configuration Release --no-restore --verbosity minimal  
-    #     # dotnet build PKHeX.Drawing.PokeSprite/PKHeX.Drawing.PokeSprite.csproj --configuration Release --no-restore --verbosity minimal
-    #     # dotnet build PKHeX.Drawing.Misc/PKHeX.Drawing.Misc.csproj --configuration Release --no-restore --verbosity minimal
+    - name: Build Core Projects  
+      run: |
+        dotnet build PKHeX.Core/PKHeX.Core.csproj --configuration Release --no-restore --verbosity minimal
+        dotnet build PKHeX.Drawing/PKHeX.Drawing.csproj --configuration Release --no-restore --verbosity minimal  
+        dotnet build PKHeX.Drawing.PokeSprite/PKHeX.Drawing.PokeSprite.csproj --configuration Release --no-restore --verbosity minimal
+        dotnet build PKHeX.Drawing.Misc/PKHeX.Drawing.Misc.csproj --configuration Release --no-restore --verbosity minimal
     
-    # - name: Run Core Tests  
-    #   run: |
-    #     # Skip specific legality tests on macOS due to missing test data files and potential System.Drawing dependencies
-    #     dotnet test Tests/PKHeX.Core.Tests/PKHeX.Core.Tests.csproj --configuration Release --no-restore --verbosity minimal \
-    #       --logger trx --results-directory TestResults/ \
-    #       --filter "FullyQualifiedName!~TestPublicFiles&FullyQualifiedName!~TestPrivateFiles"
+    - name: Build PKHeX MAUI for macOS
+      run: |
+        dotnet build PKHeX.MAUI/PKHeX.MAUI.csproj --configuration Release --no-restore -f net8.0-maccatalyst -r maccatalyst-arm64
     
-    # - name: Build PKHeX MAUI for macOS
-    #   run: |
-    #     cd PKHeX.MAUI
-    #     dotnet build --configuration Release --no-restore -f net8.0-maccatalyst -r maccatalyst-arm64
-    
-    # - name: Verify MAUI build output
-    #   run: |
-    #     cd PKHeX.MAUI
-    #     if [ -d "bin/Release/net8.0-maccatalyst17.0/maccatalyst-arm64/PKHeX.MAUI.app" ]; then
-    #       echo "✅ MacOS app bundle created successfully!"
-    #       echo "App bundle location: PKHeX.MAUI/bin/Release/net8.0-maccatalyst17.0/maccatalyst-arm64/PKHeX.MAUI.app"
-    #       ls -la bin/Release/net8.0-maccatalyst17.0/maccatalyst-arm64/
-          
-    #       # Set app path for UI tests
-    #       echo "PKHEX_APP_PATH=$(pwd)/bin/Release/net8.0-maccatalyst/maccatalyst-arm64/PKHeX.MAUI.app" >> $GITHUB_ENV
-    #     else
-    #       echo "⚠️ MacOS app bundle not found, checking other output directories..."
-    #       find bin -name "*.app" -type d || echo "No .app bundles found"
-    #       find bin -name "PKHeX.MAUI*" || echo "No PKHeX.MAUI outputs found"
-    #       exit 1
-    #     fi
+    - name: Verify MAUI build output
+      run: |
+        cd PKHeX.MAUI
+        # Check for app bundle in possible locations
+        if [ -d "bin/Release/net8.0-maccatalyst/maccatalyst-arm64/PKHeX.MAUI.app" ]; then
+          APP_PATH="$(pwd)/bin/Release/net8.0-maccatalyst/maccatalyst-arm64/PKHeX.MAUI.app"
+          echo "✅ MacOS app bundle found at: $APP_PATH"
+        elif [ -d "bin/Release/net8.0-maccatalyst17.0/maccatalyst-arm64/PKHeX.MAUI.app" ]; then
+          APP_PATH="$(pwd)/bin/Release/net8.0-maccatalyst17.0/maccatalyst-arm64/PKHeX.MAUI.app"
+          echo "✅ MacOS app bundle found at: $APP_PATH"
+        else
+          echo "⚠️ MacOS app bundle not found, checking output directories..."
+          find bin -name "*.app" -type d || echo "No .app bundles found"
+          find bin -name "PKHeX.MAUI*" || echo "No PKHeX.MAUI outputs found"
+          ls -la bin/Release/ || echo "No Release folder"
+          exit 1
+        fi
+        
+        # Set app path for UI tests
+        echo "PKHEX_APP_PATH=$APP_PATH" >> $GITHUB_ENV
+        echo "App will be available at: $APP_PATH"
+        ls -la "$APP_PATH" || echo "Failed to list app contents"
     
     - name: Build UI Test Project
       run: |
-        dotnet build PKHeX.MAUI.UITests/PKHeX.MAUI.UITests.csproj --configuration Release --verbosity minimal -r maccatalyst-arm64
+        dotnet build PKHeX.MAUI.UITests/PKHeX.MAUI.UITests.csproj --configuration Release --verbosity minimal
     
     - name: Start Appium Server
       run: |
@@ -127,27 +131,67 @@ jobs:
         
         echo "Appium server started successfully"
     
+    - name: Prepare App for Testing
+      run: |
+        # Ensure app is signed for local execution
+        if [ -n "$PKHEX_APP_PATH" ] && [ -d "$PKHEX_APP_PATH" ]; then
+          echo "Preparing app at: $PKHEX_APP_PATH"
+          
+          # Remove quarantine attribute
+          sudo xattr -rd com.apple.quarantine "$PKHEX_APP_PATH" || echo "No quarantine to remove"
+          
+          # Codesign for local execution
+          codesign --force --deep --sign - "$PKHEX_APP_PATH" || echo "Codesigning failed, may still work"
+          
+          # Verify app structure
+          ls -la "$PKHEX_APP_PATH/Contents/" || echo "App Contents not found"
+          
+          # Test if app can be launched (briefly)
+          timeout 10s open "$PKHEX_APP_PATH" || echo "App launch test completed"
+          sleep 2
+          pkill -f PKHeX || echo "No PKHeX process to kill"
+          
+          echo "App preparation completed"
+        else
+          echo "ERROR: PKHEX_APP_PATH not set or app not found"
+          exit 1
+        fi
+    
     - name: Run UI Tests - Pokemon Creation
       continue-on-error: true
       run: |
+        echo "Starting Pokemon Creation Tests..."
+        echo "App path: $PKHEX_APP_PATH"
+        
         cd PKHeX.MAUI.UITests
         dotnet test --configuration Release --no-build --verbosity normal \
           --filter "FullyQualifiedName~PokemonCreationTests" \
           --logger trx --results-directory ../TestResults/UI/ \
-          --logger "console;verbosity=detailed"
+          --logger "console;verbosity=detailed" \
+          --collect:"XPlat Code Coverage" \
+          --settings runsettings.xml || echo "Pokemon Creation tests completed with issues"
       env:
         PKHEX_APP_PATH: ${{ env.PKHEX_APP_PATH }}
+        APPIUM_HOST: 127.0.0.1
+        APPIUM_PORT: 4723
     
     - name: Run UI Tests - Inventory Management
       continue-on-error: true
       run: |
+        echo "Starting Inventory Management Tests..."
+        echo "App path: $PKHEX_APP_PATH"
+        
         cd PKHeX.MAUI.UITests
         dotnet test --configuration Release --no-build --verbosity normal \
           --filter "FullyQualifiedName~InventoryManagementTests" \
           --logger trx --results-directory ../TestResults/UI/ \
-          --logger "console;verbosity=detailed"
+          --logger "console;verbosity=detailed" \
+          --collect:"XPlat Code Coverage" \
+          --settings runsettings.xml || echo "Inventory Management tests completed with issues"
       env:
         PKHEX_APP_PATH: ${{ env.PKHEX_APP_PATH }}
+        APPIUM_HOST: 127.0.0.1
+        APPIUM_PORT: 4723
     
     - name: Stop Appium Server
       if: always()
